# node-ed25519

./: .gitattributes  .gitignore  .taplo.toml  Cargo.toml  README.md  browser.js  ed25519.wasi-browser.js  ed25519.wasi.cjs  index.d.ts  index.js  package.json
.cargo/: config.toml
.github/workflows/: CI.yaml  CI.yml  lint.yaml
__test__/: index.spec.ts
benchmark/: bench.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
