[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-ed25519"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = { version = "3.0.0-pre.0", features = ["rand_core"] }
napi          = { version = "3.0.0", default-features = false, features = ["napi3"]}
napi-derive   = { version = "3.0.0" }
rand          = "0.9"
rand_core     = "0.9"

[target.'cfg(all(not(linux), not(target_family = "wasm")))'.dependencies]
mimalloc = { version = "0.1" }

[target.'cfg(all(target_os = "linux", not(target_arch = "arm")))'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
strip         = 'symbols'
