[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-ed25519"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = { version = "3.0.0-pre.6", features = ["rand_core"] }
getrandom     = { version = "0.4", features = ["sys_rng"] }
napi          = { version = "3", default-features = false, features = ["napi3"] }
napi-derive   = { version = "3" }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"
